--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,14 @@
     <string name="menu_home">首頁</string>
     <string name="menu_gallery">動作錄製</string>
     <string name="menu_slideshow">歷史資料</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_tools">使用者資料</string>
     <string name="menu_share">Share</string>
     <string name="menu_login">login</string>
     <string name="certify">登入</string>
     <string name="username">使用者名稱</string>
     <string name="password">密碼</string>
     <string name="btnUploadToServer">上傳</string>
-    <string name="version">2020-08-31-v1.0</string>
+    <string name="version">2020-09-16-v2.5</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
